# sc1_mng_rs

./: Cargo.toml  README.md
src/: main.rs  settings.rs  utils.rs
ui/: Cargo.toml  build.rs
ui/assets/: globals.slint  main.slint
ui/src/: lib.rs
