[package]
name = "sc1_mng_rs"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
serde = { version = "1.0.213", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
toml = "0.8.19"
ui = { path = "ui" }
windows = { version = "0.58.0", features = [
    "Wdk_Foundation",
    "Wdk_System_Threading",
    "Win32_UI_Shell_Common",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }
